sendImage endpoint defined
documentation updated

changed datetime in database to localtime
